welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
def peinture() {
^PictureMono2:1: error: expected class or object definition
def peinture() {
^PictureMono2:5: error: expected class or object definition
def faireV() {
^PictureMono2:21: error: expected class or object definition
def avance7() {
^PictureMono2:26: error: expected class or object definition
def monte() {
^PictureMono2:32: error: expected class or object definition
def faire Motif() {
^