welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
def peinture() {
  baisseBrosse()
  leveBrosse()
	}
def faireV() {
  avance()
  avance()
  peinture()
  avance()
 	gauche()
  avance()
  peinture()
  recule()
  droite()
  avance()
  peinture()
  avance()
  avance()
  gauche()
}
def avance7() {
  for (i<- 1 to 7) {
    avance()
  }
}
def monte() {
  for {i <- 1 to 21} (recule())
  gauche()
avance7()
droite()}

def faire Motif() {
  for (i<- 1 to 3) {
    faireV()
    avance7())
  monte()
}
override def run() { 
  for (j <- 1 to 3) {
    faireMotif()}
}